mdapipkg/objects/Error_Email_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Includes recipients, email template, and merge field data for various error emails sent by the EmailServices class.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCC__c</fullName>
        <description>BCC email addresses, separated by semicolons (;)</description>
        <inlineHelpText>BCC email addresses, separated by semicolons (;)</inlineHelpText>
        <label>BCC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <description>CC email addresses, separated by semicolons (;)</description>
        <inlineHelpText>CC email addresses, separated by semicolons (;)</inlineHelpText>
        <label>CC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <description>Template Unique Name for the email template.</description>
        <inlineHelpText>Template Unique Name for the email template.</inlineHelpText>
        <label>Template</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <description>Email addresses to send the email to, separated by semicolons (;)</description>
        <inlineHelpText>Email addresses to send the email to, separated by semicolons (;)</inlineHelpText>
        <label>To</label>
        <type>TextArea</type>
    </fields>
    <label>Error Email Settings</label>
</CustomObject>